--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,12 @@
 			<version>3.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>3.0.0</version>
+			<groupId>jakarta.platform</groupId>
+			<artifactId>jakarta.jakartaee-api</artifactId>
+			<version>9.0.0</version>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
