--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.port=8080
-
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -9,4 +7,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dd-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
+springdoc.api-docs.path=/api-docs
+management.endpoints.web.exposure.include=openapi, swagger-ui
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
+
 
